tried to add object-fit to images to prevent them from stretching on mobile view

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -202,6 +202,10 @@ span {
 
 @media only screen and (max-width: 1100px) {
 
+    .step-pic {
+        object-fit: contain;
+    }
+
     .flex-item {
         display: flex;
         flex-direction: column;
@@ -214,7 +218,6 @@ span {
 @media only screen and (max-width: 800px) {
     .headerContent {
         top: 2rem;
-    
     }
 
     h1 {
